--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <title>Hello</title>
   <meta charset="utf-8">
+    <link rel="stylesheet" href="index.css">
 </head>
 <body>
     <div>Hello, my comrad!</div>
