--- a/index.html
+++ b/index.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Hello</title>
-  <meta charset="utf-8">
+    <title>Hello</title>
+    <meta charset="utf-8">
     <link rel="stylesheet" href="index.css">
 </head>
 <body>
-    <div>Hello, my comrad!</div>
+<div>
+    <h1>Hello, my comrad!</h1>
+    <a href="/pages/chat/chat.html">Главное окно чата</a>
+</div>
 </body>
 </html>
