--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <div>
     <h1>Hello, my comrad!</h1>
     <a href="/pages/chat/chat.html">Главное окно чата</a>
+    <a href="http://localhost:4000/pages/login/login.html">Логин</a>
 </div>
 </body>
 </html>
