--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 <div>
     <h1>Hello, my comrad!</h1>
     <a href="/pages/chat/chat.html">Главное окно чата</a>
-    <a href="http://localhost:4000/pages/login/login.html">Логин</a>
+    <a href="/pages/login/login.html">Логин</a>
+    <a href="/pages/register/register.html">Регистрация</a>
 </div>
 </body>
 </html>
