Страница информация о пользователе

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <a href="/pages/chat/chat.html">Главное окно чата</a>
     <a href="/pages/login/login.html">Логин</a>
     <a href="/pages/register/register.html">Регистрация</a>
+    <a href="/pages/user-info/user-info.html">Информация о пользователе</a>
 </div>
 </body>
 </html>
