Сделал 404 и 500, настроил роуты, потаскал папочки

--- a/static/index.html
+++ b/static/index.html
@@ -12,6 +12,8 @@
     <a href="/pages/login/login.html">Логин</a>
     <a href="/pages/register/register.html">Регистрация</a>
     <a href="/pages/user-info/user-info.html">Информация о пользователе</a>
+    <a href="/djhfkshkfkjdshjkf">404</a>
+    <a href="/internal-error.html">500</a>
 </div>
 </body>
 </html>
