--- a/static/pages/user-info/user-info.html
+++ b/static/pages/user-info/user-info.html
@@ -39,7 +39,7 @@
                 </div>
             </div>
         </div>
-        <div style="display: flex; flex-direction: column">
+        <div style="display: flex; flex-direction: column; margin-top: 16px">
             <button class="user-info-block__button user-info-block__primary-button">Сохранить</button>
         </div>
     </div>
