--- a/static/pages/chat/chat.html
+++ b/static/pages/chat/chat.html
@@ -17,7 +17,6 @@
         <div class="chat-list-and-search-input-container">
             <div class="search-container">
                 <input class="search-container__input" type="text"/>
-<!--                <textarea class="input-main__input"></textarea>-->
                 <div class="search-container__send-button-container">
                     <button class="search__send-button">
                         <i class="fas fa-search fa-2x"></i>
@@ -25,7 +24,7 @@
                 </div>
             </div>
             <div class="chat-list-container-wrapper">
-                <div class="chat-list-container">
+                <div>
                     <div class="chat-item chat-item__selected">
                         <img src=https://placekitten.com/100/100 class="chat-item__logo" alt="logo"/>
                         <div class="chat-item__all-text-container">
