перевёл страницу "чаты" на шаблоны

--- a/pages/chat/chat.html
+++ b/pages/chat/chat.html
@@ -3,23 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <title>Chat</title>
+    <link href="../../index.css" rel="stylesheet">
     <link href="chat.css" rel="stylesheet">
     <link href="chat-list.css" rel="stylesheet">
     <link href="messages-list.css" rel="stylesheet">
     <link href="input-main.css" rel="stylesheet">
     <link href="search.css" rel="stylesheet">
-    <link href="../../index.css" rel="stylesheet">
 
+    <!-- Библиотеки -->
     <link href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" rel="stylesheet">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.7.6/handlebars.min.js"></script>
     <script crossorigin="anonymous" integrity="sha256-wCBClaCr6pJ7sGU5kfb3gQMOOcIZNzaWpWcj/lD9Vfk="
             src="https://cdnjs.cloudflare.com/ajax/libs/date-fns/1.30.1/date_fns.min.js"></script>
 
-    <script src="templates/chat-item.tmpl.js"></script>
-    <script src="../../utils/handlebars-custom-helpers.js"></script>
-    <script src="../../api/messages-api-stub.js"></script>
-    <script src="../../utils/utils.js"></script>
-    <script src="chat.js"></script>
+    <!-- Мои модули -->
+    <script src="../../utils/handlebars-custom-helpers.js" type="module"></script>
+    <script src="chat.js" type="module"></script>
+    <script src="module1.js" type="module"></script>
 </head>
 
 <body>
@@ -36,78 +36,14 @@
         </div>
         <div class="chat-list-container-wrapper">
             <div id="chat-list-container">
-
+                <!-- Сюда chat.js вставит список чатов -->
             </div>
         </div>
     </div>
     <div class="messages-list-and-input-container">
         <div class="messages-list-container-wrapper">
-            <div class="messages-list-container">
-                <div>
-                    <div class="date">09.06.2020</div>
-                    <div class="message-user-group">
-                        <img alt="user avatar" class="message-user-group__avatar" src=https://placekitten.com/100/100/>
-                        <div class="message-user-group__all-text-container">
-                            <div class="message-user-group__author-container">
-                                <span class="message-user-group__author">Вася</span>
-                            </div>
-                            <div class="message-user-group__messages-container">
-                                <div class="message-user-group__message-row">
-                                    <div class="message-user-group__message-text">блаблабла</div>
-                                    <div>21:21</div>
-                                </div>
-
-                                <div class="message-user-group__message-row">
-                                    <div class="message-user-group__message-text">бубубу</div>
-                                    <div>21:22</div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="message-user-group">
-                        <img alt="user avatar" class="message-user-group__avatar" src=https://placekitten.com/100/100/>
-                        <div class="message-user-group__all-text-container">
-                            <div class="message-user-group__author-container">
-                                <span class="message-user-group__author">Ольга</span>
-                            </div>
-                            <div class="message-user-group__messages-container">
-                                <div class="message-user-group__message-row">
-                                    <div class="message-user-group__message-text">блаблабла</div>
-                                    <div>21:21</div>
-                                </div>
-
-                                <div class="message-user-group__message-row">
-                                    <div class="message-user-group__message-text">бубубу</div>
-                                    <div>21:22</div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
-                <div>
-                    <div class="date">10.06.2020</div>
-                    <div class="message-user-group">
-                        <img alt="user avatar" class="message-user-group__avatar" src=https://placekitten.com/100/100/>
-                        <div class="message-user-group__all-text-container">
-                            <div class="message-user-group__author-container">
-                                <span class="message-user-group__author">Владимир</span>
-                            </div>
-                            <div class="message-user-group__messages-container">
-                                <div class="message-user-group__message-row">
-                                    <div class="message-user-group__message-text">блаблабла</div>
-                                    <div>21:21</div>
-                                </div>
-
-                                <div class="message-user-group__message-row">
-                                    <div class="message-user-group__message-text">Всем привет!</div>
-                                    <div>21:22</div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
+            <div class="messages-list-container" id="messages-list-container">
+                <!-- Сюда chat.js вставит список сообщений -->
             </div>
         </div>
         <div class="input-main-container">
