поигрался со шрифтами

--- a/pages/login/login.html
+++ b/pages/login/login.html
@@ -21,7 +21,7 @@
         <div id="logo-root">
             <!-- Сюда insert-logo.js вставит логотип-->
         </div>
-        <h1>Представься, мразь!</h1>
+        <h1 class="auth-block__title">Вход</h1>
         <input class="auth-block__input login-block__login-input" type="text" placeholder="Логин"/>
         <input class="auth-block__input login-block__login-password" type="password" placeholder="Пароль"/>
         <div class="login-block__buttons-container">
