--- a/pages/register/register.html
+++ b/pages/register/register.html
@@ -22,7 +22,7 @@
         <div id="logo-root">
             <!-- Сюда insert-logo.js вставит логотип-->
         </div>
-        <h1>Зарегистрируйся, мразь!</h1>
+        <h1 class="auth-block__title">Регистрация</h1>
         <form name="register">
             <div class="auth-block__inputs-container">
                 <div class="auth-block__input-with-errors-container">
