вернул обратно папку static

--- a/static/index.html
+++ b/static/index.html
@@ -13,7 +13,7 @@
     <a href="/pages/register/register.html">Регистрация</a>
     <a href="/pages/user-info/user-info.html">Информация о пользователе</a>
     <a href="/djhfkshkfkjdshjkf">404</a>
-    <a href="/internal-error.html">500</a>
+    <a href="/internal-error.htmlor.html">500</a>
 </div>
 </body>
 </html>
