--- a/static/pages/login/login.html
+++ b/static/pages/login/login.html
@@ -14,6 +14,7 @@
             src="https://cdnjs.cloudflare.com/ajax/libs/date-fns/1.30.1/date_fns.min.js"></script>
 
     <script src="../insert-logo.js" type="module"></script>
+    <script src="login.js" type="module"></script>
 </head>
 <body>
 <div class="auth-window">
@@ -22,12 +23,21 @@
             <!-- Сюда insert-logo.js вставит логотип-->
         </div>
         <h1 class="auth-block__title">Вход</h1>
-        <input class="auth-block__input login-block__login-input" type="text" placeholder="Логин"/>
-        <input class="auth-block__input login-block__login-password" type="password" placeholder="Пароль"/>
-        <div class="login-block__buttons-container">
-            <button class="auth-block__button auth-block__primary-button">Войти</button>
-            <button class="auth-block__button auth-block__secondary-button">Зарегистрироваться</button>
-        </div>
+        <form class="auth-block__form" name="login">
+            <input class="auth-block__input login-block__login-input" name="login" placeholder="Логин" type="text"/>
+            <div id="login-errors-container">
+
+            </div>
+            <input class="auth-block__input login-block__login-password" name="password" placeholder="Пароль"
+                   type="password"/>
+            <div id="password-errors-container">
+
+            </div>
+            <div class="login-block__buttons-container">
+                <button class="auth-block__button auth-block__primary-button" type="submit">Войти</button>
+                <button class="auth-block__button auth-block__secondary-button">Зарегистрироваться</button>
+            </div>
+        </form>
     </div>
 </div>
 </body>
