--- a/static/index.html
+++ b/static/index.html
@@ -8,12 +8,12 @@
 <body>
 <div>
     <h1>Hello, my comrad!</h1>
-    <a href="/pages/chat/chat.html">Главное окно чата</a>
-    <a href="/pages/login/login.html">Логин</a>
-    <a href="/pages/register/register.html">Регистрация</a>
-    <a href="/pages/user-info/user-info.html">Информация о пользователе</a>
-    <a href="/djhfkshkfkjdshjkf">404</a>
-    <a href="/internal-error.htmlor.html">500</a>
+    <a href="./pages/chat/chat.html">Главное окно чата</a>
+    <a href="./pages/login/login.html">Логин</a>
+    <a href="./pages/register/register.html">Регистрация</a>
+    <a href="./pages/user-info/user-info.html">Информация о пользователе</a>
+    <a href="./not-existing-utl">404</a>
+    <a href="./internal-error.html">500</a>
 </div>
 </body>
 </html>
