--- a/static/pages/chat/chat.html
+++ b/static/pages/chat/chat.html
@@ -35,14 +35,14 @@
         </div>
         <div class="chat-list-container-wrapper">
             <div id="chat-list-container">
-                <!-- Сюда chat.js вставит список чатов -->
+                <!-- Сюда chat.ts вставит список чатов -->
             </div>
         </div>
     </div>
     <div class="messages-list-and-input-container">
         <div class="messages-list-container-wrapper">
             <div class="messages-list-container" id="messages-list-container">
-                <!-- Сюда chat.js вставит список сообщений -->
+                <!-- Сюда chat.ts вставит список сообщений -->
             </div>
         </div>
         <div class="input-main-container">
