--- a/static/index.html
+++ b/static/index.html
@@ -4,6 +4,7 @@
     <title>Hello</title>
     <meta charset="utf-8">
     <link rel="stylesheet" href="index.css">
+    <script src="index.js" type="module"></script>
 </head>
 <body>
 <div>
@@ -12,7 +13,7 @@
     <a href="./pages/login/login.html">Логин</a>
     <a href="./pages/register/register.html">Регистрация</a>
     <a href="./pages/user-info/user-info.html">Информация о пользователе</a>
-    <a href="./not-existing-utl">404</a>
+    <a href="./non-existing-url">404</a>
     <a href="./internal-error.html">500</a>
 </div>
 </body>
