--- a/static/index.html
+++ b/static/index.html
@@ -4,6 +4,13 @@
     <title>Hello</title>
     <meta charset="utf-8">
     <link rel="stylesheet" href="index.css">
+
+    <!-- Библиотеки -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.7.6/handlebars.min.js"></script>
+    <script crossorigin="anonymous" integrity="sha256-wCBClaCr6pJ7sGU5kfb3gQMOOcIZNzaWpWcj/lD9Vfk="
+            src="https://cdnjs.cloudflare.com/ajax/libs/date-fns/1.30.1/date_fns.min.js"></script>
+
+    <script src="./utils/handlebars-custom-helpers.js" type="module"></script>
     <script src="index.js" type="module"></script>
 </head>
 <body>
@@ -15,6 +22,9 @@
     <a href="./pages/user-info/user-info.html">Информация о пользователе</a>
     <a href="./non-existing-url">404</a>
     <a href="./internal-error.html">500</a>
+</div>
+<div id="root">
+
 </div>
 </body>
 </html>
