--- a/static/index.html
+++ b/static/index.html
@@ -10,7 +10,8 @@
     <script crossorigin="anonymous" integrity="sha256-wCBClaCr6pJ7sGU5kfb3gQMOOcIZNzaWpWcj/lD9Vfk="
             src="https://cdnjs.cloudflare.com/ajax/libs/date-fns/1.30.1/date_fns.min.js"></script>
 
-    <script src="./utils/handlebars-custom-helpers.js" type="module"></script>
+
+    <script src="./common-deps.js" type="module"></script>
     <script src="index.js" type="module"></script>
 </head>
 <body>
