--- a/static/pages/chat/chat.html
+++ b/static/pages/chat/chat.html
@@ -17,7 +17,7 @@
             src="https://cdnjs.cloudflare.com/ajax/libs/date-fns/1.30.1/date_fns.min.js"></script>
 
     <!-- Мои модули -->
-    <script src="../../utils/handlebars-custom-helpers.js" type="module"></script>
+    <script src="../../common-deps.js" type="module"></script>
     <script src="chat.js" type="module"></script>
 </head>
 
