--- a/static/pages/user-info/user-info.html
+++ b/static/pages/user-info/user-info.html
@@ -12,6 +12,7 @@
     <script crossorigin="anonymous" integrity="sha256-wCBClaCr6pJ7sGU5kfb3gQMOOcIZNzaWpWcj/lD9Vfk="
             src="https://cdnjs.cloudflare.com/ajax/libs/date-fns/1.30.1/date_fns.min.js"></script>
 
+    <script src="../../common-deps.js" type="module"></script>
     <script src="user-info.js" type="module"></script>
 </head>
 <body>
