перенес страницу чата на вреакт

--- a/static/pages/chat/chat.html
+++ b/static/pages/chat/chat.html
@@ -22,37 +22,8 @@
 </head>
 
 <body>
-<div class="chat-window">
-    <div class="chat-list-and-search-input-container">
-        <div class="search-container">
-            <input class="search-container__input" type="text"/>
-            <div class="search-container__send-button-container">
-                <button class="search__send-button">
-                    <i class="fas fa-search fa-2x"></i>
-                </button>
-            </div>
-        </div>
-        <div class="chat-list-container-wrapper">
-            <div id="chat-list-container">
-                <!-- Сюда chat.ts вставит список чатов -->
-            </div>
-        </div>
-    </div>
-    <div class="messages-list-and-input-container">
-        <div class="messages-list-container-wrapper">
-            <div class="messages-list-container" id="messages-list-container">
-                <!-- Сюда chat.ts вставит список сообщений -->
-            </div>
-        </div>
-        <div class="input-main-container">
-            <textarea class="input-main__input"></textarea>
-            <div class="input-main__send-button-container">
-                <button class="input__send-button">
-                    <i class="fas fa-paper-plane fa-3x"></i>
-                </button>
-            </div>
-        </div>
-    </div>
+<div id="chat-root">
+    <!--Сюда залетит главный компонент чата-->
 </div>
 </body>
 </html>
