--- a/static/index.html
+++ b/static/index.html
@@ -6,10 +6,16 @@
     <link rel="stylesheet" href="index.css">
 
     <!-- Библиотеки -->
+    <link href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" rel="stylesheet">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.7.6/handlebars.min.js"></script>
     <script crossorigin="anonymous" integrity="sha256-wCBClaCr6pJ7sGU5kfb3gQMOOcIZNzaWpWcj/lD9Vfk="
             src="https://cdnjs.cloudflare.com/ajax/libs/date-fns/1.30.1/date_fns.min.js"></script>
-
+    <link href="index.css" rel="stylesheet">
+    <link href="pages/chat/chat.css" rel="stylesheet">
+    <link href="pages/chat/chat-list.css" rel="stylesheet">
+    <link href="pages/chat/messages-list.css" rel="stylesheet">
+    <link href="pages/chat/input-main.css" rel="stylesheet">
+    <link href="pages/chat/search.css" rel="stylesheet">
 
     <script src="./common-deps.js" type="module"></script>
     <script src="index.js" type="module"></script>
