перевел страницу "логин" на честный вреакт

--- a/static/index.html
+++ b/static/index.html
@@ -18,7 +18,7 @@
     <link href="pages/chat/search.css" rel="stylesheet">
 
     <script src="./common-deps.js" type="module"></script>
-    <script src="index.js" type="module"></script>
+    <script src="./index.js" type="module"></script>
 </head>
 <body>
 <div>
