роутер, обращение к товарищу ревьюеру

--- a/static/index.html
+++ b/static/index.html
@@ -22,9 +22,9 @@
 </head>
 <body>
 <div>
-    <h1>Hello, my comrad!</h1>
-    <a href="./pages/chat/chat.html">Главное окно чата</a>
-    <a href="./pages/login/login.html">Логин</a>
+    <a href="./#">Главная</a>
+    <a href="./#chat">Чат</a>
+    <a href="./#login">Логин</a>
     <a href="./pages/register/register.html">Регистрация</a>
     <a href="./pages/user-info/user-info.html">Информация о пользователе</a>
     <a href="./non-existing-url">404</a>
