--- a/static/pages/user-info/user-info.html
+++ b/static/pages/user-info/user-info.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>User info</title>
-    <link rel="stylesheet" href="../../index.css">
-    <link rel="stylesheet" href="user-info.css">
+
+    <link href="../../bundle.css" rel="stylesheet">
 
     <!-- Библиотеки -->
     <link href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" rel="stylesheet">
