--- a/static/pages/chat/chat.html
+++ b/static/pages/chat/chat.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <title>Chat</title>
-    <link href="../../index.css" rel="stylesheet">
-    <link href="chat.css" rel="stylesheet">
-    <link href="chat-list.css" rel="stylesheet">
-    <link href="messages-list.css" rel="stylesheet">
-    <link href="input-main.css" rel="stylesheet">
-    <link href="search.css" rel="stylesheet">
+    <!--    <link href="../../index.css" rel="stylesheet">-->
+    <!--    <link href="chat.css" rel="stylesheet">-->
+    <!--    <link href="chat-list.css" rel="stylesheet">-->
+    <!--    <link href="messages-list.css" rel="stylesheet">-->
+    <!--    <link href="input-main.css" rel="stylesheet">-->
+    <!--    <link href="search.css" rel="stylesheet">-->
 
     <!-- Библиотеки -->
     <link href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" rel="stylesheet">
