--- a/static/pages/register/register.html
+++ b/static/pages/register/register.html
@@ -3,9 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Login</title>
-    <link rel="stylesheet" href="register.css">
-    <link rel="stylesheet" href="../../index.css">
-    <link rel="stylesheet" href="../login-register-common.css">
+
+    <link href="../../bundle.css" rel="stylesheet">
 
     <!-- Библиотеки -->
     <link href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" rel="stylesheet">
