--- a/src/pages/register/register.html
+++ b/src/pages/register/register.html
@@ -13,14 +13,14 @@
             src="https://cdnjs.cloudflare.com/ajax/libs/date-fns/1.30.1/date_fns.min.js"></script>
 
     <script src="../../../static/common-deps.js" type="module"></script>
-    <script src="../insert-logo.js" type="module"></script>
+    <script src="../insert-logo.ts" type="module"></script>
     <script src="register.js" type="module"></script>
 </head>
 <body>
 <div class="auth-window">
     <div class="auth-block">
         <div id="logo-root">
-            <!-- Сюда insert-logo.js вставит логотип-->
+            <!-- Сюда insert-logo.ts вставит логотип-->
         </div>
         <h1 class="auth-block__title">Регистрация</h1>
         <form name="register">
