перевел страницу регистрация на псевдореакт

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <a href="#">Главная</a>
     <a href="#chat">Чат</a>
     <a href="#login">Логин</a>
-    <a href="src/pages/register/register.html">Регистрация</a>
+    <a href="#register">Регистрация</a>
     <a href="src/pages/user-info/user-info.html">Информация о пользователе</a>
     <a href="./non-existing-url">404</a>
     <a href="src/pages/internal-error/internal-error.html">500</a>
