--- a/src/pages/register/register.html
+++ b/src/pages/register/register.html
@@ -14,7 +14,7 @@
 
     <script src="../../../static/common-deps.js" type="module"></script>
     <script src="../insert-logo.ts" type="module"></script>
-    <script src="register.js" type="module"></script>
+    <script src="register.ts" type="module"></script>
 </head>
 <body>
 <div class="auth-window">
