--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
     <a href="#chat">Чат</a>
     <a href="#login">Логин</a>
     <a href="#register">Регистрация</a>
-    <a href="src/pages/user-info/user-info.html">Информация о пользователе</a>
+    <a href="src/pages/user-info/user-info.html">Информация о пользователе (не работает)</a>
     <a href="./non-existing-url">404</a>
-    <a href="src/pages/internal-error/internal-error.html">500</a>
+    <a href="/internal-error.html">500</a>
 </div>
 <div id="root">
 
